# etlambda

./: .gitignore  LICENSE  README.md  setup.cfg
etlambda/: enrich_data.py  extract_data.py  load_raster.py  load_table.py  load_vector.py
