[metadata]
name = etlambda
version = 0.0.1
author = Diego Moreira and Alisson Palmeira
author_email = diego@khartes.com.br and alisson.palmeira@gmail.com
description = ETL lambda layer
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/khartes/etlambda
project_urls =
    Bug Tracker = https://github.com/khartes/etlambda/issues
keywords = etl, geoprocessing, aws
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Topic :: Scientific/Engineering :: GIS
    Operating System :: OS Independent

[options]
packages = etlambda
python_requires = >=3.6