[metadata]
name = etlambda
version = 0.1.1
author = Diego Moreira and Alisson Palmeira
author_email = diego@khartes.com.br and alisson.palmeira@gmail.com
description = ETL lambda layer
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/khartes/etlambda
project_urls =
    Bug Tracker = https://github.com/khartes/etlambda/issues
keywords = etl, geoprocessing, aws
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Topic :: Scientific/Engineering :: GIS
    Operating System :: OS Independent

[options]
packages = etlambda
python_requires = >=3.7

[options.extras_require]
ENRICH_DATA = psycopg2-binary==2.8.6; SQLAlchemy==1.4.17
EXTRACT_GBQ = requests==2.25.1; Unidecode==1.2.0; pandas-gbq==0.15.0
EXTRACT_GEE = requests==2.25.1; Unidecode==1.2.0; earthengine-api==0.1.265
EXTRACT_HTTP = requests==2.25.1; Unidecode==1.2.0
EXTRACT_INCRA = requests==2.25.1; Unidecode==1.2.0; beautifulsoup4==4.5.3
EXTRACT_SICAR = requests==2.25.1; Unidecode==1.2.0; aws-requests-auth==0.4.3; Pillow==7.0.0; remotezip==0.9.3; 2captcha-python==1.1.0
EXTRACT_SIDRA = requests==2.25.1; Unidecode==1.2.0
EXTRACT_WFS = requests==2.25.1; Unidecode==1.2.0
LOAD_RASTER = psycopg2-binary==2.8.6; SQLAlchemy==1.4.17; gdal2pgsql@https://github.com/khartes/gdal2pgsql/archive/refs/tags/v0.1.zip
LOAD_TABLE = psycopg2-binary==2.8.6; SQLAlchemy==1.4.17; pandas==1.2.4; openpyxl==3.0.7; xlrd==2.0.1
LOAD_VECTOR = gdal2pgsql@https://github.com/khartes/gdal2pgsql/archive/refs/tags/v0.1.zip
